dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolabajabe
spec:
  selector:
    matchLabels:
      app: kolabajabe
  template:
    metadata:
      labels:
        app: kolabajabe
    spec:
      containers:
        - name: kolabajabe
          image: edbfort/kolab-aja-be:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
