dev/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-cluster
spec:
  selector:
    app: kolabajabe
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
